[package]
name = "broken_field"
version = "0.1.0"
authors = ["Aaron Kofsky <a2aarontothe2@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
pixel-canvas = "0.2.3"
rayon = "1.3.1"
num-complex = "0.4.0"
random_color = "0.6.1"
colorgrad = "0.6.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
